# mobinha

./: .gitignore  Pipfile  README.md  __init__.py  lidar.rviz  requirements.txt
common/: CMakeLists.txt  README.md  package.xml
common/create_csv/: csv_maker.py  hitech.csv  hitech.qgz
common/create_desktop_app/: how_to_create_desktop_app.txt  mobinha.desktop
common/generate_map/: 1127.pkl  gen_pickle.py  gen_pickle_start.py  gen_pickle_testlink.py  inside.pkl  outside.pkl  path_back.pkl  start_right.pkl  weekdays_1119.pkl  weekdays_1120.pkl  weekdays_1121.pkl  weekdays_1126.pkl  weekdays_ed.pkl  weekdays_ed1.pkl  weekdays_ed2.pkl
common/get_dist/: pub_distance.py
common/get_frenet/: get_frenet_stopline.py  get_frenet_stopline_ui.py
docs/: README.md  architecture.md  assets.md  schedule.md  todo.md
scripts/: README.md  kill_all.sh  run_all1.sh  run_sensor.sh
selfdrive/: README.md  sensor_check.py  test.py  tool.py
selfdrive/car/: CMakeLists.txt  README.md  can_bridge.py  can_transceiver.py  car.py  control_ui.py  fingerprint.json  ioniq_transceiver copy.py  ioniq_transceiver.py  lat_test.py  long_test.py  morai_transceiver.py  niro.py  niro_can.py  niro_transceiver.py  op_carstate.py  package.xml  params.py  simulate_ego.py  simulator.py  simulator_can.py  simulator_transceiver.py  states.py  test_control-v1.py  test_control.py  values.py
selfdrive/control/: CMakeLists.txt  README.md  control.py  controller.py  controller_mpc.py  controls.py  localizer.py  package.xml  simulator.py  solve_mpc_problem.py  sub.py
selfdrive/failsafe/: CMakeLists.txt  README.md  estop_check.py  package.xml  tor_check.py
selfdrive/manager/: 2024-01-30-17-07-27.bag.active  (+179 more)
selfdrive/visualize/: blinker_simulator.py  imugl.py  main.rviz  package.xml  record_list.txt  right_turn_simulator.py  rviz_utils.py  simple_writer.py  test.py  tl_simulator.py  ui_test.py  visualize.py  viz.py  viz_utils.py
selfdrive/visualize/forms/: blinker_simulator.ui  lidar.rviz  main.rviz  main.ui  main_origin.rviz  right_turn_simulator.ui  simple_writer.ui  tl_simulator.ui
selfdrive/visualize/libs/: imugl.py  quadratic_spline_interpolate.py
selfdrive/visualize/routes/: KCity.py  KCity_origin.py  destination.py  gosilsil.py  songdo-site.py  songdo.py
selfdrive/visualize/src/: viz.py
src/mobinha/selfdrive/car/: README.md  package.xml  simulator_transceiver.py
src/mobinha/selfdrive/car/dbc/ioniq/: can-past.dbc  error.txt
src/mobinha/selfdrive/car/odometry/: 1.csv  3.csv  4.csv  comp_gps_odom_plot.py  distance_measure+wheel_odom.py  encoder_odom.csv  gps_plot.py
src/mobinha/selfdrive/car/test/: test_control-v2.py
src/morai_ws/src/MORAI-ROS_morai_msgs/: CMakeLists.txt  README.md  package.xml
src/morai_ws/src/MORAI-ROS_morai_msgs/msg/: CollisionData.msg  DdCtrlCmd.msg  DillyCmd.msg  DillyCmdResponse.msg  EgoDdVehicleStatus.msg  EgoVehicleStatus.msg  EgoVehicleStatusExtended.msg  FaultInjection_Controller.msg  FaultInjection_Response.msg  FaultInjection_Sensor.msg  FaultInjection_Tire.msg  FaultStatusInfo.msg  FaultStatusInfo_Overall.msg  FaultStatusInfo_Sensor.msg  FaultStatusInfo_Vehicle.msg  IntersectionControl.msg  MultiPlayEventRequest.msg  NpcGhostCmd.msg  ObjectStatusExtended.msg  ObjectStatusListExtended.msg  PREvent.msg  RadarDetection.msg  RadarDetections.msg  SVADC.msg  SetTrafficLight.msg  SkateboardCtrlCmd.msg  SkateboardStatus.msg  SkidSteer6wUGVCtrlCmd.msg  SkidSteer6wUGVStatus.msg  TrafficLight.msg  WoowaDillyStatus.msg
src/morai_ws/src/MORAI-ROS_morai_msgs/srv/: FaultInjectionCtrlSrv.srv  FaultInjectionSensorSrv.srv  FaultInjectionTireSrv.srv  MoraiSyncModeAddObjectSrv.srv  MoraiSyncModeRemoveObjectSrv.srv  MultiPlayEventSrv.srv  WoowaDillyEventCmdSrv.srv
tools/: CMakeLists.txt  README.md  camera_record.sh  object_test.py  package.xml  record.sh
(+1591 files in other folders)
